--- a/src/app/calling/cold-call/cold-call.page.scss
+++ b/src/app/calling/cold-call/cold-call.page.scss
@@ -14,3 +14,8 @@
  .cardheaderalignment {
    justify-content: center; 
  }
+ .colorred {
+  color: red;
+    padding-left: 18px;
+    font-size: 10px !important;
+ }
